# hector_quadrotor_apps

./: stack.xml  tutorials.rosinstall
hector_quadrotor_controller/: CMakeLists.txt
hector_quadrotor_controller/matlab/: CMakeLists.txt
hector_quadrotor_controller/src/: quadrotor_aerodynamics.cpp
hector_quadrotor_demo/launch/: indoor_slam_gazebo.launch  outdoor_flight_gazebo.launch
hector_quadrotor_ptam/: mainpage.dox  manifest.xml
hector_quadrotor_ptam/config/: hector_quadro_ptam_params.yaml
hector_quadrotor_ptam/launch/: launch_simulation.launch  ptam_hector.launch
